# doc-assistant

./: README.md  main.py  pyproject.toml
backend/: core.py
src/: ingestion.py
